Добавляет логотип в хэдер

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header class="page-header">
       <div class="container">
         <a class="page-header-link" href="#">
-          <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Device»">
+          <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
+            alt="Логотип интернет-магазина «Device»">
         </a>
         <div class="search-form-container">
           <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -285,16 +286,19 @@
             <div class="telegram">
               <a class="social-button" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Телеграм</span>
+                <img src="" alt="Telegram">
               </a>
             </div>
             <div class="youtube">
               <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Ютьюб</span>
+                <img src="" alt="Youtube">
               </a>
             </div>
             <div class="twitter">
               <a class="social-button" href="https://twitter.com/htmlacademy_ru">
                 <span class="visually-hidden">Твиттер</span>
+                <img src="" alt="Twitter">
               </a>
             </div>
           </div>
