Добавляет фото слайдера

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <div class="slider-container">
           <h2 class="visually-hidden">Популярные товары</h2>
           <div class="slide-1">
-            <img class="slider-image" src="" alt="Фото квадрокоптера">
+            <img class="slider-image" src="images/slider-img/slider-1.png" width="560" height="560"
+              alt="Фото квадрокоптера">
             <div class="slider-info-container">
               <h3 class="slider-info-title">Порхает как бабочка, жалит как пчела!</h3>
               <p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
@@ -61,7 +62,8 @@
           </div>
 
           <div class="slide-2">
-            <img class="slider-image" src="" alt="Фото фитнес-браслета">
+            <img class="slider-image" src="images/slider-img/slider-2.png" width="560" height="560"
+              alt="Фото фитнес-браслета">
             <div class="slider-info-container">
               <h3 class="slider-info-title">Худеем правильно!</h3>
               <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
@@ -76,7 +78,8 @@
           </div>
 
           <div class="slide-3">
-            <img class="slider-image" src="" alt="Фото палки для селфи">
+            <img class="slider-image" src="images/slider-img/slider-3.png" width="560" height="560"
+              alt="Фото палки для селфи">
             <div class="slider-info-container">
               <h3 class="slider-info-title">Делай селфи, как Бен Стиллер!</h3>
               <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
