Добавляет картинки в список каталога продуктов

--- a/index.html
+++ b/index.html
@@ -130,29 +130,35 @@
         <div class="container">
           <h2 class="visually-hidden">Категории товаров</h2>
           <a class="product-category-link" href="#">
-            <img class="product-category-img" src="" alt="Иконка VR">
+            <img class="product-category-img" src="images/index-catalog-img/index-catalog-img-1.svg" width="160"
+              height="160" alt="Иконка VR">
             <p class="product-category-description">Виртуальная
               реальность</p>
           </a>
           <a class="product-category-link" href="#">
-            <img class="product-category-img" src="" alt="Иконка селфи монопода">
+            <img class="product-category-img" src="images/index-catalog-img/index-catalog-img-2.svg" width="160"
+              height="160" alt="Иконка селфи монопода">
             <p class="product-category-description">Моноподы
               для селфи</p>
           </a>
           <a class="product-category-link" href="#">
-            <img class="product-category-img" src="" alt="Иконка экшн-камеры">
+            <img class="product-category-img" src="images/index-catalog-img/index-catalog-img-3.svg" width="160"
+              height="160" alt="Иконка экшн-камеры">
             <p class="product-category-description">Экшн-камеры</p>
           </a>
           <a class="product-category-link" href="#">
-            <img class="product-category-img" src="" alt="Иконка фитнес-браслета">
+            <img class="product-category-img" src="images/index-catalog-img/index-catalog-img-4.svg" width="160"
+              height="160" alt="Иконка фитнес-браслета">
             <p class="product-category-description">Фитнес-браслеты</p>
           </a>
           <a class="product-category-link" href="#">
-            <img class="product-category-img" src="" alt="Иконка умных часов">
+            <img class="product-category-img" src="images/index-catalog-img/index-catalog-img-5.svg" width="160"
+              height="160" alt="Иконка умных часов">
             <p class="product-category-description">Умные часы</p>
           </a>
           <a class="product-category-link" href="#">
-            <img class="product-category-img" src="" alt="Иконка квадрокоптера">
+            <img class="product-category-img" src="images/index-catalog-img/index-catalog-img-6.svg" width="160"
+              height="160" alt="Иконка квадрокоптера">
             <p class="product-category-description">Квадрокоптеры</p>
           </a>
         </div>
