Добавляет картинки в раздел преимуществ

--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
             <p class="tab-text">Мы с удовольствием доставим ваш товар прямо
               к вашему подъезду совершенно бесплатно! Ведь
               мы неплохо заработаем, поднимая его на ваш этаж.</p>
-            <img class="tab-description-img" src="" alt="Доставим товар к вашему подъезду">
+            <img class="tab-description-img" src="images/advantages-img/advantages-delivery.svg" width="136"
+              height="164" alt="Доставим товар к вашему подъезду">
           </div>
 
           <div class="tab-description">
@@ -185,7 +186,8 @@
             <p class="tab-text">Если из-за возгорания купленного у нас товара у вас
               сгорит дом — не переживайте, мы выдадим вам новый.
               Товар, не дом, конечно же.</p>
-            <img class="tab-description-img" src="" alt="Гарантируем замену сорманного товара на новый">
+            <img class="tab-description-img" src="images/advantages-img/advantages-guarantee.svg" width="171"
+              height="195" alt="Гарантируем замену сорманного товара на новый">
           </div>
 
           <div class="tab-description">
@@ -193,7 +195,8 @@
             <p class="tab-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас
               наиболее
               выгодные условия кредита. Выгодные для банка, разумеется.</p>
-            <img class="tab-description-img" src="" alt="Подберём выгодный кредит">
+            <img class="tab-description-img" src="images/advantages-img/advantages-credit.svg" width="156" height="188"
+              alt="Подберём выгодный кредит">
           </div>
         </div>
       </section>
@@ -203,7 +206,8 @@
           <h2 class="visually-hidden">Доставка под заказ</h2>
           <button class="unique-advantage-button">
             <div class="img-block">
-              <img class="unique-advantage-img" src="" alt="Доставка под заказ">
+              <img class="unique-advantage-img" src="images/advantages-img/advantages-unique-delivery.svg" width="47"
+                height="31" alt="Доставка под заказ">
             </div>
             <div class="text-block">
               <p class="unique-advantage-text">Доставим редкий товар под заказ</p>
