--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
       <div class="container">
         <section class="footer-contacts">
           <h2 class="visually-hidden">Адрес</h2>
-          <img class="footer-contacts-logo" src="" alt="Логотип интернет-магазина «Device»">
+          <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
+            alt="Логотип интернет-магазина «Device»">
           <address class="cotacts-address">
             <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </address>
