Добавляет логотип проекта в хедер

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,8 @@
   <header class="page-header">
     <div class="container">
       <a class="page-header-link" href="#">
-        <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Device»">
+        <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
+          alt="Логотип интернет-магазина «Device»">
       </a>
       <div class="search-form-container">
         <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
