Добавляет картинки в футер

--- a/catalog.html
+++ b/catalog.html
@@ -210,7 +210,8 @@
     <div class="container">
       <section class="footer-contacts">
         <h2 class="visually-hidden">Адрес</h2>
-        <img class="footer-contacts-logo" src="" alt="Логотип интернет-магазина «Device»">
+        <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
+          alt="Логотип интернет-магазина «Device»">
         <address class="cotacts-address">
           <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
         </address>
@@ -231,16 +232,19 @@
           <div class="telegram">
             <a class="social-button" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
+              <img src="images/Socials/telegram-icon.svg" width="14" height="12" alt="Telegram">
             </a>
           </div>
           <div class="youtube">
             <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Ютьюб</span>
+              <img src="images/Socials/youtube-icon.svg" width="16" height="11" alt="Youtube">
             </a>
           </div>
           <div class="twitter">
             <a class="social-button" href="https://twitter.com/htmlacademy_ru">
               <span class="visually-hidden">Твиттер</span>
+              <img src="images/Socials/twitter-icon.svg" width="15" height="14.06" alt="Twitter">
             </a>
           </div>
         </div>
@@ -252,7 +256,7 @@
           <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-          <img class="about-text" src="" alt="html-academy-logo">
+          <img class="about-text" src="images/html-academy-icon.svg" width="115" height="33" alt="html-academy-logo">
         </a>
       </section>
     </div>
