--- a/catalog.html
+++ b/catalog.html
@@ -142,28 +142,32 @@
           <div class="product-list-container">
             <section class="prouct-card">
               <a class="product-card-link" href="#">
-                <img class="product-card-image" src="" alt="Фотография любительской селфи-палки">
+                <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-1.jpg" width="360"
+                  height="380" alt="Фотография любительской селфи-палки">
                 <h3 class="product-card-title">Любительская селфи-палка</h3>
               </a>
               <span class="product-card-price">500 ₽</span>
             </section>
             <section>
               <a class="product-card-link" href="#">
-                <img class="product-card-image" src="" alt="Фотография профессиональной селфи-палки">
+                <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-2.jpg" width="360"
+                  height="380" alt="Фотография профессиональной селфи-палки">
                 <h3 class="product-card-title">Профессиональная селфи-палка</h3>
               </a>
               <span class="product-card-price">1 500 ₽</span>
             </section>
             <section>
               <a class="product-card-link" href="#">
-                <img class="product-card-image" src="" alt="Фотография непотопляемой селфи-палки">
+                <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-3.jpg" width="360"
+                  height="380" alt="Фотография непотопляемой селфи-палки">
                 <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
               </a>
               <span class="product-card-price">2 500 ₽</span>
             </section>
             <section>
               <a class="product-card-link" href="#">
-                <img class="product-card-image" src="" alt="Фотография селфи-палки в виде руки">
+                <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-4.jpg" width="360"
+                  height="380" alt="Фотография селфи-палки в виде руки">
                 <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
               </a>
               <span class="product-card-price">1 500 ₽</span>
