Меняет кнопку на ссылку

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="user-link user-basket" href="#">Корзина</a>
         </div>
         <div class="catalog-container">
-          <button class="button catalog-button">Каталог товаров</button>
+          <a class="navigation-link navigation-catalog" href="#">Каталог товаров</a>
         </div>
         <nav class="navigation">
           <a class="navigation-link" href="#">Доставка</a>
