--- a/index.html
+++ b/index.html
@@ -131,23 +131,29 @@
         <div class="container">
           <h2 class="visually-hidden">Категории товаров</h2>
           <a class="product-category-link" href="#">
+            <div class="product-category-img image-vr"></div>
             <p class="product-category-description">Виртуальная
               реальность</p>
           </a>
           <a class="product-category-link" href="#">
+            <div class="product-category-img image-monopod"></div>
             <p class="product-category-description">Моноподы
               для селфи</p>
           </a>
           <a class="product-category-link" href="#">
+            <div class="product-category-img image-camera"></div>
             <p class="product-category-description">Экшн-камеры</p>
           </a>
           <a class="product-category-link" href="#">
+            <div class="product-category-img image-bracelet"></div>
             <p class="product-category-description">Фитнес-браслеты</p>
           </a>
           <a class="product-category-link" href="#">
+            <div class="product-category-img image-watch"></div>
             <p class="product-category-description">Умные часы</p>
           </a>
           <a class="product-category-link" href="#">
+            <div class="product-category-img image-copter"></div>
             <p class="product-category-description">Квадрокоптеры</p>
           </a>
         </div>
