Применяет стили к футеру

--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
           <h2 class="visually-hidden">Адрес</h2>
           <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
             alt="Логотип интернет-магазина «Device»">
-          <address class="cotacts-address">
-            <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <address class="contacts-address">
+            <p class="footer-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </address>
         </section>
 
@@ -270,9 +270,9 @@
           <div class="footer-navigation">
             <h2 class="visually-hidden">Наши преимущества</h2>
             <nav class="navigation">
-              <a class="navigation-link" href="#">Доставка</a>
-              <a class="navigation-link" href="#">Гарантия</a>
-              <a class="navigation-link" href="#">Контакты</a>
+              <a class="footer-navigation-link" href="#">Доставка</a>
+              <a class="footer-navigation-link" href="#">Гарантия</a>
+              <a class="footer-navigation-link" href="#">Контакты</a>
             </nav>
           </div>
 
@@ -298,8 +298,8 @@
 
         <section class="footer-connection">
           <h2 class="visually-hidden">Позвоните нам</h2>
-          <address class="cotacts-address">
-            <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <address class="footer-contacts-address">
+            <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
           <a class="htmlacademy-link" href="https://htmlacademy.ru/">
             <img class="about-text" src="images/html-academy-icon.svg" width="115" height="33" alt="html-academy-logo">
