--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
   <main class="main-inner">
     <section class="catalog-title">
       <div class="container">
-        <h1 class="inner-header-title">Моноподы для селфи</h1>
+        <h1 class="main-title">Моноподы для селфи</h1>
         <ul class="breadcrumbs-list">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">Главная</a>
@@ -225,10 +225,10 @@
       <section class="footer-nav-socials">
         <div class="footer-navigation">
           <h2 class="visually-hidden">Наши преимущества</h2>
-          <nav class="navigation">
-            <a class="footer-navigation-link" href="#">Доставка</a>
-            <a class="footer-navigation-link" href="#">Гарантия</a>
-            <a class="footer-navigation-link" href="#">Контакты</a>
+          <nav class="navigation footer-navigation">
+            <a class="navigation-link" href="#">Доставка</a>
+            <a class="navigation-link" href="#">Гарантия</a>
+            <a class="navigation-link" href="#">Контакты</a>
           </nav>
         </div>
 
