--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="user-link user-basket" href="#">Корзина</a>
         </div>
         <div class="catalog-container">
-          <a class="navigation-link navigation-catalog" href="#">Каталог товаров</a>
+          <a class="navigation-link navigation-catalog" href="catalog.html">Каталог товаров</a>
         </div>
         <nav class="navigation">
           <a class="navigation-link" href="#">Доставка</a>
@@ -47,7 +47,7 @@
             <img class="slider-image" src="images/slider-img/slider-1.png" width="560" height="560"
               alt="Фото квадрокоптера">
             <div class="slider-info-container">
-              <h3 class="slider-info-title">Порхает как бабочка, жалит как пчела!</h3>
+              <h3 class="main-title">Порхает как бабочка, жалит как пчела!</h3>
               <p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
                 замаскированным
                 под
@@ -66,7 +66,7 @@
             <img class="slider-image" src="images/slider-img/slider-2.png" width="560" height="560"
               alt="Фото фитнес-браслета">
             <div class="slider-info-container">
-              <h3 class="slider-info-title">Худеем правильно!</h3>
+              <h3 class="main-title">Худеем правильно!</h3>
               <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
                 соблюдать
                 диету.</p>
@@ -82,7 +82,7 @@
             <img class="slider-image" src="images/slider-img/slider-3.png" width="560" height="560"
               alt="Фото палки для селфи">
             <div class="slider-info-container">
-              <h3 class="slider-info-title">Делай селфи, как Бен Стиллер!</h3>
+              <h3 class="main-title">Делай селфи, как Бен Стиллер!</h3>
               <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
                 метров
                 длиной и весом всего 5 кг.</p>
@@ -162,21 +162,21 @@
             <button class="advantages-button" type="button">Кредит</button>
           </div>
           <div class="tab-description">
-            <h3 class="tab-description-title">Доставка</h3>
+            <h3 class="main-title">Доставка</h3>
             <p class="tab-text">Мы с удовольствием доставим ваш товар прямо
               к вашему подъезду совершенно бесплатно! Ведь
               мы неплохо заработаем, поднимая его на ваш этаж.</p>
           </div>
 
           <div class="tab-description">
-            <h3 class="tab-description-title">Гарантия</h3>
+            <h3 class="main-title">Гарантия</h3>
             <p class="tab-text">Если из-за возгорания купленного у нас товара у вас
               сгорит дом — не переживайте, мы выдадим вам новый.
               Товар, не дом, конечно же.</p>
           </div>
 
           <div class="tab-description">
-            <h3 class="tab-description-title">Кредит</h3>
+            <h3 class="main-title">Кредит</h3>
             <p class="tab-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас
               наиболее
               выгодные условия кредита. Выгодные для банка, разумеется.</p>
@@ -200,7 +200,7 @@
       <section class="company-info">
         <div class="container">
           <div class="about-us">
-            <h2 class="about-us-title">О нас</h2>
+            <h2 class="main-title">О нас</h2>
             <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
             </p>
             <p class="about-us-text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными
@@ -221,7 +221,7 @@
           </div>
 
           <div class="contacts">
-            <h2 class="contacts-title">Контакты</h2>
+            <h2 class="main-title">Контакты</h2>
             <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис.
               Заодно сможете проверить работоспособность покупки.</p>
             <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
@@ -241,7 +241,7 @@
 
       <section class="newsletter">
         <div class="container">
-          <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+          <h2 class="main-title">Подпишитесь на рассылку</h2>
           <p class="newsletter-text">Еженедельный дайджест с обзорами новинок,
             длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -269,10 +269,10 @@
         <section class="footer-nav-socials">
           <div class="footer-navigation">
             <h2 class="visually-hidden">Наши преимущества</h2>
-            <nav class="navigation">
-              <a class="footer-navigation-link" href="#">Доставка</a>
-              <a class="footer-navigation-link" href="#">Гарантия</a>
-              <a class="footer-navigation-link" href="#">Контакты</a>
+            <nav class="navigation footer-navigation">
+              <a class="navigation-link" href="#">Доставка</a>
+              <a class="navigation-link" href="#">Гарантия</a>
+              <a class="navigation-link" href="#">Контакты</a>
             </nav>
           </div>
 
