Добавляет разметку sticky-footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </header>
 
-    <main class="main-index">
+    <main class="main-container main-index">
       <h1 class="visually-hidden">Интернет-магазин «Device»</h1>
       <section class="slider">
         <div class="slider-container">
