Добавляет сетку в хэдер

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="page-header">
-      <div class="container">
+      <div class="header-container">
         <a class="page-header-link" href="#">
           <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
             alt="Логотип интернет-магазина «Device»">
